refresh token swagger documentation
